--- a/home.html
+++ b/home.html
@@ -29,7 +29,7 @@
 <header>
   <nav class="navbar">
       <div class="navlevo">
-        <h1 class="h1">GRAFOSTIL</h1>
+        <h1 class="h1" onclick="home()">GRAFOSTIL</h1>
       </div>
       <div class="navdesno">
           <div class="desno home">
